package com.orbanszlrd.quizapi.modules.user;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
