package com.orbanszlrd.quizapi.user;

public enum Role {
    OWNER,
    ADMIN,
    USER
}
