@startuml Entity Relationship Diagram

!theme spacelab

skinparam backgroundColor #202020
skinparam CaptionFontColor #FFF
skinparam CaptionFontSize 18

header

end header

footer

end footer

title Quiz API

caption
Entity Relationship Diagram
end caption

left to right direction

enum Role {
    OWNER
    ADMIN
    USER
}

enum Gender {
    MALE
    FEMALE
    OTHER
}

class  User {
    - Long id
    - String email
    - String username
    - String password
    - boolean enabled
    - Role role
    - String firstName
    - String LastName
    - Date dateOfBirth
    - Gender gender
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getEmail()
    + void setEmail(String email)
    + String getUsername()
    + void setUsername(String username)
    + String getPassword()
    + void setPassword(String password)
    + boolean isEnabled()
    + void setEnabled(boolean enabled)
    + Role getRole()
    + void setRole(Role role)
    + String getFirstName()
    + void setFirstName(String firstName)
    + String getLastName()
    + void setLastName(String lastName)
    + Date getDateOfBirth()
    + void setDateOfBirth(Date dateOfBirth)
    + Gender getGender()
    + void setGender(Gender gender)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class Category {
    - Long id
    - String name
    - List<Quiz> quizzes
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getName()
    + void setName(String name)
    + List<Quiz> getQuizzes()
    + void setQuizzes(List<Quiz> quizzes)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class Quiz {
    - Long id
    - String name
    - Integer timeLimit
    - Category category
    - List<Question> questions
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getName()
    + void setName(String name)
    + Category getCategory()
    + void setCategory(Category category)
    + List<Question> getQuestions()
    + void setQuestions(List<Question> questions)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
} 

class Question {
    - Long id
    - String text
    - Integer timeLimit
    - Byte value
    - Quiz quiz
    - List<Answer> answers
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getText()
    + void setText(String text)
    + Integer getTimeLimit()
    + void setTimeLimit(Integer timeLimit)
    + Byte getValue()
    + void setValue(Byte value)
    + Quiz getQuiz()
    + void setQuiz(Quiz quiz)
    + List<Answer> getAnswers()
    + void setAnswers(Answer answer)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class Answer {
    - Long id
    - String text
    - Question question    
    - boolean correct
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + String getText()
    + void setText(String text)
    + Question getQuestion()
    + void setQuestion(Question question)
    + boolean isCorrect()
    + void setCorrect(boolean correct)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class  UserQuiz {
    - Long id
    - User user
    - Quiz quiz
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + User getUser()
    + void setUser(User user)
    + Quiz getQuiz()
    + void setQuiz(Quiz quiz)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

class  UserAnswer {
    - Long id
    - UserQuiz userQuiz
    - Question question
    - Answer answer
    - Timestamp createdAt
    - Timestamp updatedAt
    + Long getId()
    + void setId(Long id)
    + UserQuiz getUserQuiz()
    + void setUserQuiz(UserQuiz userQuiz)
    + Question getQuestion()
    + void setQuestion(Question question)
    + Answer getAnswer()
    + void setAnswer(Answer answer)
    + Timestamp getCreatedAt()
    + Timestamp getUpdatedAt()
}

User o-- Role
User o-- Gender

Category "1" o-- "n" Quiz

Quiz o-- Category
Quiz "1" o-- "n" Question

Question o-- Quiz
Question "1" o-- "n" Answer

Answer o-- Question

UserQuiz o-- User
UserQuiz o-- Quiz

UserAnswer o-- UserQuiz
UserAnswer o-- Question
UserAnswer o-- Answer

@enduml